Fix card quantity alignment

--- a/static/basic.css
+++ b/static/basic.css
@@ -75,7 +75,7 @@ ul {
 }
 
 .cardquantity {
-    width: 20%;
+    width: 2em;
     text-align: right;
     padding-right: 1em;
 }
